[metadata]
name = rabbitleap
author = Ahmed AlSahaf
author-email = me@asahaf.com
home-page = https://github.com/asahaf/rabbitleap
description = Simple RabbitMQ consuming framework
long-description = file: README.rst
license = MIT
license_file = LICENSE
platform = any
keywords = rabbitmq
           messaging
           message
           consumer
           consuming
           framework
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Communications
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Pike Modules
    Topic :: Software Development :: Object Brokering
    Topic :: System :: Distributed Computing


[options]
zip_safe = false
include_package_data = true
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
test_suite = tests
setup_requires =
    setuptools
	setuptools >=30.3.0

[bdist_wheel]
universal = true
